--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.4.2",
     "date-fns": "^2.14.0",
     "fetch-mock": "^9.10.7",
+    "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jss": "^10.3.0",
