--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
     "@types/yup": "^0.29.8",
     "antd": "^4.4.2",
     "date-fns": "^2.14.0",
@@ -24,6 +25,7 @@
     "react-dom": "^16.13.1",
     "react-jss": "^10.3.0",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "typescript": "^4.0.3",
