--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ewelina-wierzbicka.github.io/weather-app/",
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@reduxjs/toolkit": "^1.4.0",
@@ -27,6 +28,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-toastify": "^6.2.0",
     "redux": "^4.0.5",
     "typescript": "^4.0.3",
     "whatwg-fetch": "^3.4.1",
@@ -36,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
